# smo_archipelago

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  HAKKUN.md  LICENSE  README.md
.claude/: settings.local.json
.claude/skills/smo-build/: SKILL.md
.claude/skills/smo-extract-data/: SKILL.md
.claude/skills/smo-host-tests/: SKILL.md
.claude/skills/smo-loopback-test/: SKILL.md
.claude/skills/smo-poptracker/: SKILL.md
.claude/skills/smo-symbol-discovery/: SKILL.md
.githooks/: pre-push
.github/: dependabot.yaml
.github/workflows/: release.yml  test.yml
apworld/: README.md
apworld/smo_archipelago/: Data.py  DataValidation.py  Game.py  Helpers.py  Items.py  Locations.py  ManualClient.py  Meta.py  Options.py  Regions.py  Rules.py  __init__.py  archipelago.json  manual_test.py  smo_test.py  talkatoo_order.py  talkatoo_requirements.py
apworld/smo_archipelago/_setup/: __init__.py  audit.py  build.py  deploy.py  installers.py  launcher_errors.py  net.py  prereqs.py  smoap_file.py  wizard.py  wizard_cli.py
apworld/smo_archipelago/client/: commands.py  config.py  context.py  datapackage.py  discovery.py  display.py  gui.py  main.py  maps.py  net_util.py  protocol.py  reachability.py  shop_labels.py  state.py  switch_server.py
apworld/smo_archipelago/data/: categories.json  game.json  items.json  locations.json  meta.json  regions.json
apworld/smo_archipelago/docs/: setup_en.md
apworld/smo_archipelago/hooks/: Data.py  Helpers.py  Options.py  Rules.py  World.py
apworld/smo_archipelago/tests/: conftest.py  test_already_checked_provider.py  test_ap_loopback.py  test_apworld_generation.py  test_build_subprocess_unbuffered.py  test_bundled_extraction.py  test_cappy_from_filter.py  test_commands.py  test_connect_gate.py  test_context_output.py  test_datapackage.py  test_deathlink.py  test_deploy.py  test_discovery.py  test_display.py  test_extract_hactool_runner.py  test_extract_keys_normalize.py  test_goal_on_victory_location.py  test_install_apworld_bundling.py  test_installers.py  test_kingdom_moon_count.py  test_launch_routing.py  test_launcher_errors.py  test_outstanding.py  test_prereqs.py  test_progression_moons.py  test_protocol.py  test_release_audit.py  test_settings_str.py  test_setup_appdata_root.py  test_setup_audit_hook.py  test_smoap_file.py  test_state_switches.py  test_subprocess_timeouts.py  test_switch_server.py  test_talkatoo_reachability.py  test_wizard_cli.py  test_wizard_delegates_to_cli.py  (+1 more)
bridge/: .gitignore  config.example.toml  pyproject.toml  requirements.txt
bridge/smo_ap_bridge/: __init__.py  __main__.py  ap_client.py  config.py  datapackage.py  logging_setup.py  protocol.py  state.py  switch_server.py  tracker_web.py
bridge/smo_ap_bridge/seed_sim/: __init__.py  charts.py  coplayer.py  generate.py  sim.py  spoiler.py  timing.py
bridge/test_seeds/: smo_loopback.yaml
bridge/tests/: test_ap_loopback.py  test_apworld_generation.py  test_datapackage.py  test_protocol.py  test_seed_sim_charts.py  test_seed_sim_sim.py  test_seed_sim_spoiler.py  test_seed_sim_units.py  test_switch_server.py
bridge/tests/fixtures/: sample_spoiler.txt
docs/: TALKATOO.md  architecture.md  build-windows.md  changing-servers.md  extract-moon-data.md  first-time-setup.md  handoff-talkatoo.md  install-switch.md  milestones.md  release-process.md  seed-sim-handoff.md  wire-protocol.md
docs/reference/: locations_with_movement_logic.json
poptracker/: versions.json
poptracker/pack-src/: manifest.json
scripts/: ap_generate.py  ap_server.py  bridge_smoke_test.py  build_poptracker_pack.py  build_switchmod.py  check_nso_symbols.py  extract_shine_map.py  fix_hakkun_symlinks.py  install_apworld.py  install_hooks.ps1  local_release_audit.ps1  patch_hakkun.py  release_audit.py  setup_imgui_addons.py  setup_sail_winpath.py  simulate_seeds.py  switch_smoke_test.py  sync_capture_table.ps1  sync_capture_table.py  sync_shine_table.py  update_poptracker_versions.py
switch-mod/: CMakeLists.txt
switch-mod-hk/: .gitignore  CMakeLists.txt
switch-mod-hk/config/: VersionList.sym  config.cmake
switch-mod-hk/src/: main.cpp
switch-mod-hk/src/ap/: ApClient.cpp  ApClient.hpp  ApConfig.hpp  ApFrameBridge.cpp  ApFrameBridge.hpp  ApProtocol.cpp  ApState.hpp
switch-mod-hk/src/game/: KingdomUnlock.hpp  ShineInfoLayout.hpp
switch-mod-hk/src/hooks/: DeathHook.hpp  HookSymbols.hpp  SaveLoadHook.cpp  ShineNumGetHook.cpp
switch-mod-hk/src/ui/: ApHudOverlay.hpp  CappyMessenger.cpp  CappyMessenger.hpp
switch-mod-hk/src/util/: Json.cpp  Json.hpp  Log.hpp
switch-mod-hk/syms/game/: SmoApSymbols.sym
switch-mod/config/: VersionList.sym  config.cmake
switch-mod/romfs/: ap_config.json.in
switch-mod/src/: main.cpp
switch-mod/src/ap/: ApClient.cpp  ApClient.hpp  ApConfig.cpp  ApConfig.hpp  ApDiscovery.cpp  ApDiscovery.hpp  ApFrameBridge.cpp  ApFrameBridge.hpp  ApProtocol.cpp  ApProtocol.hpp  ApState.cpp  ApState.hpp  shine_table.h
switch-mod/src/game/: CaptureGate.cpp  CaptureGate.hpp  KingdomUnlock.cpp  KingdomUnlock.hpp  MoonApply.cpp  MoonApply.hpp  OdysseyRescue.cpp  OdysseyRescue.hpp  StageWarp.cpp
switch-mod/src/hooks/: AddHackDictionaryHook.cpp  AddHackDictionaryHook.hpp  AddPayShineHook.cpp  CappyMessageHook.cpp  CaptureStartHook.cpp  CreditsStartHook.cpp  DeathHook.cpp  EndingHook.cpp  GrowSeedInstantHook.cpp  HookSymbols.hpp  MoonGetHook.cpp  MoonLabelHook.cpp  SaveLoadHook.cpp  ScenarioFlagHook.cpp  ShineAppearanceHook.cpp  ShineNumByWorldGetHook.cpp  ShineNumGetHook.cpp  ShopItemMessageHook.cpp  SoftInstall.hpp  TalkatooMenuMarkHook.cpp  TalkatooSpeechHook.cpp  WorldMapSelectHook.cpp
switch-mod/src/ui/: ApDebugConsole.cpp  ApDebugConsole.hpp  ApHudOverlay.cpp  ApHudOverlay.hpp  CappyMessenger.cpp  CappyMessenger.hpp  EmbeddedFontKarla.hpp
switch-mod/src/util/: Json.cpp  Json.hpp  Log.cpp  Log.hpp
switch-mod/syms/: nvn.sym
switch-mod/syms/game/: SmoApSymbols.sym
switch-mod/syms/nn/: nifm.sym
switch-mod/tests/: locations_fixture.json  shine_map_fixture.json  test_cappy_messenger.cpp  test_json.cpp  test_protocol.cpp  test_shine_lookup.cpp
(+2 files in other folders)
